// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/password-complexity/v1 should return bad request error 1`] = `
Object {
  "message": "The password property is missing in Post body or have invalid value",
  "status": "error",
  "statusCode": 400,
  "type": "Bad Request",
}
`;

exports[`/password-complexity/v1 should return socpre 0 1`] = `
Object {
  "score": 0,
  "statusCode": 200,
  "strength": "Worst",
}
`;

exports[`/password-complexity/v1 should return socpre 1 1`] = `
Object {
  "score": 1,
  "statusCode": 200,
  "strength": "Bad",
}
`;

exports[`/password-complexity/v1 should return socpre 2 1`] = `
Object {
  "score": 1,
  "statusCode": 200,
  "strength": "Bad",
}
`;

exports[`/password-complexity/v1 should return socpre 3 1`] = `
Object {
  "score": 1,
  "statusCode": 200,
  "strength": "Bad",
}
`;

exports[`/password-complexity/v1 should return socpre 4 1`] = `
Object {
  "score": 3,
  "statusCode": 200,
  "strength": "Good",
}
`;

exports[`/password-complexity/v2 should return bad request error 1`] = `
Object {
  "message": "The password property is missing in Post body or have invalid value",
  "status": "error",
  "statusCode": 400,
  "type": "Bad Request",
}
`;

exports[`/password-complexity/v2 should return socpre 0 1`] = `
Object {
  "score": 0,
  "statusCode": 200,
  "strength": "Worst",
}
`;

exports[`/password-complexity/v2 should return socpre 1 1`] = `
Object {
  "score": 1,
  "statusCode": 200,
  "strength": "Bad",
}
`;

exports[`/password-complexity/v2 should return socpre 2 1`] = `
Object {
  "score": 2,
  "statusCode": 200,
  "strength": "Weak",
}
`;

exports[`/password-complexity/v2 should return socpre 3 1`] = `
Object {
  "score": 3,
  "statusCode": 200,
  "strength": "Good",
}
`;

exports[`/password-complexity/v2 should return socpre 4 1`] = `
Object {
  "score": 4,
  "statusCode": 200,
  "strength": "Strong",
}
`;

exports[`should return not found error 1`] = `
Object {
  "message": "Requested resources was not found.",
  "status": "error",
  "statusCode": 404,
  "type": "Not Found",
}
`;
